--- a/package.json
+++ b/package.json
@@ -33,7 +33,15 @@
     "install": "^0.13.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "next": "15.5.2",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "lucide-react": "0.542.0",
+    "tailwind-merge": "3.3.1",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@angular/build": "^20.1.6",
@@ -49,6 +57,9 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "typescript": "~5.8.2"
+    "typescript": "~5.8.2",
+    "@types/react": "19.1.12",
+    "@types/react-dom": "19.1.9",
+    "@types/node": "24.3.0"
   }
 }
